tests/exploratory/errors/test_frozen_array_assign_error.sn
// Test: frozen array element assignment should error
// Expected: Compilation should FAIL with frozen variable error
// When a thread captures an array, the array is frozen until sync

fn process(data: int[]): int =>
    return data[0]

fn main(): void =>
    var arr: int[] = {1, 2, 3}
    var r: int = &process(arr)  // arr is now frozen
    arr[0] = 99                  // ERROR: Cannot modify frozen variable
    print("Should not reach here\n")
